--- a/metalhanger.html
+++ b/metalhanger.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="ja">
 
@@ -122,300 +121,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="indexホーム.html">ホーム</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pet-guide-listハンガー図鑑.html">ハンガー図鑑</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pet-care-guide使い方ガイド.html">使い方ガイド</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pet-guide-qaQ&A.html">Q&A</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pet-guide-form管理記録.html">管理記録</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pet-guide-recordレビュー.html">メンテナンス記録</a></li>
-                </ul>
-                <a href="login.html"
-                    class="btn btn-outline-success ms-3 rounded-pill fw-bold btn-login text-decoration-none">
-                    <i class="bi bi-person-circle"></i> ログイン
-                </a>
-            </div>
-        </div>
-    </nav>
-
-    <header class="hanger-hero">
-        <div class="container">
-            <h1 class="display-4 fw-bold">Metal Hanger</h1>
-            <p class="fs-5">スリムで丈夫、収納効率に優れた金属ハンガー</p>
-        </div>
-    </header>
-
-    <div class="container mt-4">
-        <div class="info-card text-center">
-            <h5 class="fw-bold mb-3" style="color: var(--brown-color);">
-                <i class="bi bi-arrow-left-circle"></i> 関連ハンガー
-            </h5>
-            <a href="pet-guide-detailハンガー種類.html" class="btn btn-outline-success btn-lg rounded-pill px-5">
-                <i class="bi bi-hanger"></i> 他のハンガー種類を見る
-            </a>
-        </div>
-    </div>
-
-    <div class="container mb-5">
-        <div class="row">
-            <div class="col-lg-8">
-                <div class="hanger-main-card mb-4">
-                    <span class="badge bg-success px-3 py-2 rounded-pill mb-3">省スペース向け</span>
-
-                    <h2 class="fw-bold mb-3" style="color: var(--brown-color);">金属ハンガーの特性</h2>
-                    <p class="text-muted mb-5">
-                        金属ハンガーはスリムで耐久性が高く、クローゼット内をすっきり整理できるのが特徴です。
-                        ジャケットやシャツ、ボトムスなど幅広い衣類に対応し、業務用や大量収納にも適しています。
-                    </p>
-
-                    <div class="row g-3 mb-5 text-center">
-                        <div class="col-6 col-md-3">
-                            <div class="spec-item">
-                                <small class="text-muted">おすすめ衣類</small>
-                                <span class="spec-value">シャツ・ジャケット</span>
-                            </div>
-                        </div>
-                        <div class="col-6 col-md-3">
-                            <div class="spec-item">
-                                <small class="text-muted">主な素材</small>
-                                <span class="spec-value">スチール</span>
-                            </div>
-                        </div>
-                        <div class="col-6 col-md-3">
-                            <div class="spec-item">
-                                <small class="text-muted">耐久性</small>
-                                <span class="spec-value">5〜10年</span>
-                            </div>
-                        </div>
-                        <div class="col-6 col-md-3">
-                            <div class="spec-item">
-                                <small class="text-muted">薄さ</small>
-                                <span class="spec-value">非常にスリム</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <h4 class="fw-bold mb-4">メリット・デメリット比較</h4>
-                    <div class="table-responsive comparison-table p-3 mb-5">
-                        <table class="table table-borderless mb-0">
-                            <thead>
-                                <tr class="border-bottom">
-                                    <th class="text-success">メリット</th>
-                                    <th class="text-danger">デメリット</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td><i class="bi bi-check-circle-fill text-success me-2"></i>省スペースで大量収納が可能</td>
-                                    <td><i class="bi bi-x-circle-fill text-danger me-2"></i>衣類が滑りやすい場合あり</td>
-                                </tr>
-                                <tr>
-                                    <td><i class="bi bi-check-circle-fill text-success me-2"></i>型崩れしにくい構造</td>
-                                    <td><i class="bi bi-x-circle-fill text-danger me-2"></i>金属特有の冷たさ</td>
-                                </tr>
-                                <tr>
-                                    <td><i class="bi bi-check-circle-fill text-success me-2"></i>業務用にも使われる耐久性</td>
-                                    <td><i class="bi bi-x-circle-fill text-danger me-2"></i>デザイン性は控えめ</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="info-sidebar-card">
-                    <h5 class="fw-bold mb-3"><i class="bi bi-tools text-primary"></i> メンテナンス</h5>
-                    <ul class="small ps-3">
-                        <li class="mb-2">湿気を避けて保管</li>
-                        <li class="mb-2">錆び防止のため水分を拭き取る</li>
-                        <li>歪みが出たら交換</li>
-                    </ul>
-                </div>
-
-                <div class="info-sidebar-card">
-                    <h5 class="fw-bold mb-3"><i class="bi bi-bar-chart-fill text-warning"></i> ハンガー比較</h5>
-                    <div class="mb-3">
-                        <label class="small text-muted d-flex justify-content-between">省スペース <span>95%</span></label>
-                        <div class="progress" style="height: 6px;">
-                            <div class="progress-bar bg-warning" style="width: 95%"></div>
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <label class="small text-muted d-flex justify-content-between">耐久性 <span>90%</span></label>
-                        <div class="progress" style="height: 6px;">
-                            <div class="progress-bar bg-info" style="width: 90%"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 mb-4">
-                    <h5 class="fw-bold mb-3">
-                        <i class="bi bi-heart-fill text-danger"></i> ハンガーtimes
-                    </h5>
-                    <p>ハンガーで衣服と暮らしを応援する情報サイト</p>
-                </div>
-                <div class="col-md-2 mb-4">
-                    <h6 class="fw-bold mb-3">サイト情報</h6>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-white text-decoration-none">About</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">利用規約</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">プライバシー</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-2 mb-4">
-                    <h6 class="fw-bold mb-3">サポート</h6>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-white text-decoration-none">ヘルプ</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">お問い合わせ</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">FAQ</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <h6 class="fw-bold mb-3">フォローする</h6>
-                    <div class="d-flex gap-3">
-                        <a href="#" class="text-white fs-4"><i class="bi bi-twitter"></i></a>
-                        <a href="#" class="text-white fs-4"><i class="bi bi-instagram"></i></a>
-                        <a href="#" class="text-white fs-4"><i class="bi bi-youtube"></i></a>
-                        <a href="#" class="text-white fs-4"><i class="bi bi-facebook"></i></a>
-                    </div>
-                </div>
-            </div>
-            <hr class="border-light">
-            <p class="text-center mb-0">&copy; 2024 PetLife. All rights reserved.</p>
-        </div>
-    </footer>
-</body>
-
-=======
-<!DOCTYPE html>
-<html lang="ja">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ハンガーtimes - 金属ハンガー詳細</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
-    <style>
-        :root {
-            --primary-color: #10b981;
-            --secondary-color: #f59e0b;
-            --accent-color: #fb923c;
-            --brown-color: #78350f;
-            --hanger-beige: #fff2e5;
-        }
-
-        body {
-            font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo, sans-serif;
-            background-color: var(--hanger-beige);
-            color: #4b5563;
-        }
-
-       .navbar {
-            background-color: white;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .navbar-brand {
-            font-weight: bold;
-            color: var(--primary-color) !important;
-            font-size: 1.5rem;
-        }
-
-        .nav-link {
-            color: var(--brown-color) !important;
-            font-weight: 500;
-            margin: 0 10px;
-        }
-
-        .nav-link.active {
-            color: var(--primary-color) !important;
-            font-weight: bold;
-        }
-
-        .hanger-hero {
-            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('https://images.unsplash.com/photo-1600180758891-e83e2ba4b7da?q=80&w=2000&auto=format&fit=crop');
-            background-size: cover;
-            background-position: center;
-            height: 350px;
-            border-radius: 0 0 50px 50px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            text-align: center;
-        }
-
-        .hanger-main-card {
-            background: white;
-            border-radius: 30px;
-            padding: 40px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
-            margin-top: -60px;
-            position: relative;
-            z-index: 2;
-        }
-
-        .spec-item {
-            background: #fdf2f2;
-            border-radius: 20px;
-            padding: 20px;
-            text-align: center;
-            border: 1px solid #fee2e2;
-            height: 100%;
-        }
-
-        .spec-value {
-            font-size: 1.1rem;
-            font-weight: bold;
-            color: var(--brown-color);
-            display: block;
-            margin-top: 5px;
-        }
-
-        .info-sidebar-card {
-            background: white;
-            border-radius: 25px;
-            padding: 25px;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
-            margin-bottom: 25px;
-        }
-
-        .comparison-table {
-            background: #f9fafb;
-            border-radius: 15px;
-            overflow: hidden;
-        }
-
-        footer {
-            background-color: #5d5353;
-            color: white;
-            padding: 60px 0 30px;
-            margin-top: 80px;
-            border-radius: 50px 50px 0 0;
-        }
-
-        
-    </style>
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-lg sticky-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <i class="bi bi-hanger"></i> ハンガーtimes
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="indexホーム.html">ホーム</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">ホーム</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-listハンガー図鑑.html">ハンガー図鑑</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-care-guide使い方ガイド.html">使い方ガイド</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-qaQ&A.html">Q&A</a></li>
