--- a/pet-guide-detailハンガー種類.html
+++ b/pet-guide-detailハンガー種類.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="ja">
 
@@ -115,369 +114,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="indexホーム.html">ホーム</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pet-guide-listハンガー図鑑.html">ハンガー図鑑</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pet-care-guide使い方ガイド.html">使い方ガイド</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pet-guide-qaQ&A.html">Q&A</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pet-guide-form管理記録.html">管理記録</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pet-guide-recordレビュー.html">メンテナンス記録</a></li>
-                </ul>
-                <a href="login.html" class="btn btn-outline-success ms-3 rounded-pill fw-bold btn-login text-decoration-none">
-                    <i class="bi bi-person-circle"></i> ログイン
-                </a>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container mt-4">
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="indexホーム.html">ホーム</a></li>
-                <li class="breadcrumb-item"><a href="pet-guide-listハンガー図鑑.html">ハンガー図鑑</a></li>
-                <li class="breadcrumb-item active">マワハンガー シルエット</li>
-            </ol>
-        </nav>
-
-        <div id="petCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#petCarousel" data-bs-slide-to="0" class="active"></button>
-                <button type="button" data-bs-target="#petCarousel" data-bs-slide-to="1"></button>
-                <button type="button" data-bs-target="#petCarousel" data-bs-slide-to="2"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img/62631ef003070ac272fa730188b49dd9_w (1).jpeg" class="d-block w-100"
-                        alt="マワハンガー シルエット アイコン">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/mawahanger-silhouette1.jpg" class="d-block w-100" alt="マワハンガー シルエット 実物">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#petCarousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#petCarousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon"></span>
-            </button>
-        </div>
-
-        <div class="pet-header">
-            <div class="row align-items-center">
-                <div class="col-md-8">
-                    <span class="badge"
-                        style="background: #dcfce7; color: #10b981; padding: 10px 20px; border-radius: 50px; font-size: 1rem;">初心者向け</span>
-                    <h1 class="display-4 fw-bold mt-3 mb-3" style="color: var(--brown-color);">マワハンガー シルエット</h1>
-                    <p class="lead text-muted">ドイツ製の高品質なハンガー</p>
-                </div>
-                <div class="col-md-4 text-md-end">
-                    <button class="btn btn-success btn-lg rounded-pill mb-2 w-100"><i class="bi bi-heart"></i>
-                        お気に入り</button>
-                    <button class="btn btn-outline-warning btn-lg rounded-pill w-100"><i class="bi bi-share"></i>
-                        シェア</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-lg-8">
-                <div class="info-card">
-                    <h3 class="fw-bold mb-4" style="color: var(--brown-color);"><i
-                            class="bi bi-info-circle-fill text-success"></i> 基本情報</h3>
-                    <div class="row g-3 mb-4">
-                        <div class="col-md-3">
-                            <div class="stat-badge"><strong>サイズ</strong><br>中型</div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="stat-badge"><strong>体重</strong><br>75~80g</div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="stat-badge"><strong>寿命</strong><br>数年~10年以上</div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="stat-badge"><strong>原産地</strong><br>ドイツ</div>
-                        </div>
-                    </div>
-                    <p>肩の部分が丸みを帯びていて、服の肩崩れを防いでくれる。ジャケットやブラウスにぴったり特殊なPVCコーティングで、ツルツル素材の服でもズレ落ちにくい。キャミソールやシルク素材も安心。軽いのにしっかりしてて、長く使えるよ。金属製だけど服に跡がつきにくいのも◎
-                    </p>
-                </div>
-
-                <div class="accordion mb-4" id="petAccordion">
-                    <div class="accordion-item mb-3" style="border: none; border-radius: 20px;">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#character">
-                                <i class="bi bi-heart me-2"></i> 特徴
-                            </button>
-                        </h2>
-                        <div id="character" class="accordion-collapse collapse show" data-bs-parent="#petAccordion">
-                            <div class="accordion-body">
-                                <h5 class="fw-bold mb-3 mt-4">特徴</h5>
-                                <ul>
-                                    <li>なだらかな肩ライン</li>
-                                    <li>すべり止め加工</li>
-                                    <li>スリムで省スペース</li>
-                                    <li>軽くて丈夫</li>
-                                    <li>サイズとカラーが豊富</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="accordion-item mb-3" style="border: none; border-radius: 20px;">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#care">
-                                <i class="bi bi-clipboard-heart me-2"></i> ケア
-                            </button>
-                        </h2>
-                        <div id="care" class="accordion-collapse collapse" data-bs-parent="#petAccordion">
-                            <div class="accordion-body">
-                                <h5 class="fw-bold mb-3">日常のケア</h5>
-                                <ul>
-                                    <li><strong>拭く:</strong> 表面のPVCコーティングは水拭き</li>
-                                    <li><strong>直射日光を避ける:</strong>長時間日光に当てると、コーティングが劣化しやすくなる</li>
-                                    <li><strong>重ねすぎに注意:</strong> ハンガー同士をギュウギュウに詰めると、コーティングがこすれて傷つくことがある</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="accordion-item" style="border: none; border-radius: 20px;">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#training">
-                                <i class="bi bi-award me-2"></i> しつけ
-                            </button>
-                        </h2>
-                        <div id="training" class="accordion-collapse collapse" data-bs-parent="#petAccordion">
-                            <div class="accordion-body">
-                                <h5 class="fw-bold mb-3">服のしつけのポイント</h5>
-                                <ul>
-                                    <li><strong>型崩れ防止:</strong> 肩のラインをきれいに保つことで、服の形を正しくしつける</li>
-                                    <li><strong>すべり止め機能:</strong> 服がズレ落ちないように支えて、だらしなくならない＝姿勢を正す</li>
-                                    <li><strong>サイズに合った設計:</strong> 服にぴったり合うサイズで、無理なく自然な形をキープ</li>
-                                    <li><strong>収納時の整列:</strong> スリムで統一感のある見た目は、クローゼットの中を整然と保つしつけの一環</li>
-                                </ul>
-                                <h5 class="fw-bold mb-3 mt-4">その他のことについて</h5>
-                                <ul>
-                                    <li>通気性の確保</li>
-                                    <li>素材に合わせた優しさ</li>
-                                    <li>習慣づけのサポート</li>
-                                    <li>シワ防止</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="sidebar-card">
-                    <h5 class="fw-bold mb-4" style="color: var(--brown-color);"><i
-                            class="bi bi-star-fill text-warning"></i> 使いやすさ評価</h5>
-                    <div class="mb-3">
-                        <div class="d-flex justify-content-between mb-2"><span>初心者向け</span><strong>★★★★☆</strong></div>
-                        <div class="progress" style="height: 10px; border-radius: 10px;">
-                            <div class="progress-bar" style="width: 80%; background: var(--primary-color);"></div>
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <div class="d-flex justify-content-between mb-2"><span>お手入れ</span><strong>★★★☆☆</strong></div>
-                        <div class="progress" style="height: 10px; border-radius: 10px;">
-                            <div class="progress-bar" style="width: 60%; background: var(--secondary-color);"></div>
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <div class="d-flex justify-content-between mb-2"><span>しつけ</span><strong>★★★★☆</strong></div>
-                        <div class="progress" style="height: 10px; border-radius: 10px;">
-                            <div class="progress-bar" style="width: 60%; background: var(--primary-color);"></div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="sidebar-card">
-                    <h5 class="fw-bold mb-4" style="color: var(--brown-color);"><i class="bi bi-cash-coin"></i> 飼育費用の目安
-                    </h5>
-                    <div class="mb-2 d-flex justify-content-between"><span>初期費用</span><strong>約1,000〜5,000円程度</strong>
-                    </div>
-                    <div class="mb-2 d-flex justify-content-between"><span>月額費用</span><strong>足りなくなったら足す</strong></div>
-                </div>
-
-                <div class="sidebar-card">
-                    <h5 class="fw-bold mb-3" style="color: var(--brown-color);"><i class="bi bi-tags"></i> タグ</h5>
-                    <div class="d-flex flex-wrap gap-2">
-                        <span class="badge bg-success">#ハンガー</span>
-                        <span class="badge bg-warning text-dark">#中型</span>
-                        <span class="badge bg-info">#初心者OK</span>
-                        <span class="badge bg-danger">#ジャケット</span>
-                        <span class="badge bg-primary">#ブライス</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 mb-4">
-                    <h5 class="fw-bold mb-3">
-                        <i class="bi bi-heart-fill text-danger"></i> ハンガーtimes
-                    </h5>
-                    <p>ハンガーで衣服と暮らしを応援する情報サイト</p>
-                </div>
-                <div class="col-md-2 mb-4">
-                    <h6 class="fw-bold mb-3">サイト情報</h6>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-white text-decoration-none">About</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">利用規約</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">プライバシー</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-2 mb-4">
-                    <h6 class="fw-bold mb-3">サポート</h6>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-white text-decoration-none">ヘルプ</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">お問い合わせ</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">FAQ</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <h6 class="fw-bold mb-3">フォローする</h6>
-                    <div class="d-flex gap-3">
-                        <a href="#" class="text-white fs-4"><i class="bi bi-twitter"></i></a>
-                        <a href="#" class="text-white fs-4"><i class="bi bi-instagram"></i></a>
-                        <a href="#" class="text-white fs-4"><i class="bi bi-youtube"></i></a>
-                        <a href="#" class="text-white fs-4"><i class="bi bi-facebook"></i></a>
-                    </div>
-                </div>
-            </div>
-            <hr class="border-light">
-            <p class="text-center mb-0">&copy; 2024 PetLife. All rights reserved.</p>
-        </div>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-
-=======
-<!DOCTYPE html>
-<html lang="ja">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ハンガーtimes - ハンガー種類</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
-    <style>
-        :root {
-            --primary-color: #10b981;
-            --secondary-color: #f59e0b;
-            --brown-color: #78350f;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #fff2e5;
-            /* 白に変更 */
-        }
-
-        .navbar {
-            background-color: white;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .navbar-brand {
-            font-weight: bold;
-            color: var(--primary-color) !important;
-            font-size: 1.5rem;
-        }
-
-        .nav-link {
-            color: var(--brown-color) !important;
-            font-weight: 500;
-            margin: 0 10px;
-        }
-
-        .nav-link:hover,
-        .nav-link.active {
-            color: var(--primary-color) !important;
-        }
-
-        .carousel-item img {
-            height: 450px;
-            object-fit: cover;
-            border-radius: 30px;
-        }
-
-        .pet-header {
-            background: white;
-            border-radius: 30px;
-            padding: 40px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-            margin: -80px 0 30px 0;
-            position: relative;
-            z-index: 1;
-        }
-
-        .info-card {
-            background: white;
-            border-radius: 25px;
-            padding: 30px;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.08);
-            margin-bottom: 30px;
-        }
-
-        .accordion-button:not(.collapsed) {
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            color: white;
-        }
-
-        .accordion-button {
-            border-radius: 20px !important;
-            font-weight: bold;
-        }
-
-        .stat-badge {
-            background: #dcfce7;
-            color: var(--primary-color);
-            padding: 15px 25px;
-            border-radius: 20px;
-            text-align: center;
-        }
-
-        .sidebar-card {
-            background: white;
-            border-radius: 25px;
-            padding: 25px;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.08);
-            margin-bottom: 20px;
-        }
-
-        footer {
-            background-color: #8e7f7f;
-            color: #d8e1f1;
-            padding: 40px 0;
-            margin-top: 80px;
-            border-radius: 50px 50px 0 0;
-        }
-    </style>
-
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-lg sticky-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <i class="bi bi-hanger"></i> ハンガーtimes
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="indexホーム.html">ホーム</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">ホーム</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-listハンガー図鑑.html">ハンガー図鑑</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-care-guide使い方ガイド.html">使い方ガイド</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-qaQ&A.html">Q&A</a></li>
