--- a/login.html
+++ b/login.html
@@ -156,7 +156,7 @@
 
     <div class="login-card">
         <div class="card-top-nav">
-            <a href="indexホーム.html" class="btn-back-link">
+            <a href="index.html" class="btn-back-link">
                 <i class="bi bi-chevron-left"></i> ホームへ戻る
             </a>
         </div>
