--- a/faq.html
+++ b/faq.html
@@ -113,7 +113,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">ホーム</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">ホーム</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-listハンガー図鑑.html">ハンガー図鑑</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-care-guide使い方ガイド.html">使い方ガイド</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-qaQ&A.html">Q&A</a></li>
