--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             margin: 0 10px;
         }
 
-        .nav-link:hover {
+        .nav-link:hover,
+        .nav-link.active {
             color: var(--primary-color) !important;
         }
 
