--- a/metalhanger.html
+++ b/metalhanger.html
@@ -13,13 +13,11 @@
             --secondary-color: #f59e0b;
             --accent-color: #fb923c;
             --brown-color: #78350f;
-            --hanger-beige: #fff2e5;
         }
 
         body {
-            font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo, sans-serif;
-            background-color: var(--hanger-beige);
-            color: #4b5563;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #fff2e5;
         }
 
        .navbar {
@@ -39,13 +37,13 @@
             margin: 0 10px;
         }
 
+        .nav-link:hover,
         .nav-link.active {
             color: var(--primary-color) !important;
-            font-weight: bold;
         }
 
         .hanger-hero {
-            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('https://images.unsplash.com/photo-1600180758891-e83e2ba4b7da?q=80&w=2000&auto=format&fit=crop');
+            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('img/71+Ew-KsuaL._AC_.jpg');
             background-size: cover;
             background-position: center;
             height: 350px;
@@ -269,9 +267,9 @@
                 <div class="col-md-2 mb-4">
                     <h6 class="fw-bold mb-3">サポート</h6>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-white text-decoration-none">ヘルプ</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">お問い合わせ</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">FAQ</a></li>
+                        <li><a href="help.html" class="text-white text-decoration-none">ヘルプ</a></li>
+                        <li><a href="form.html" class="text-white text-decoration-none">お問い合わせ</a></li>
+                        <li><a href="faq.html" class="text-white text-decoration-none">FAQ</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 mb-4">
@@ -285,10 +283,8 @@
                 </div>
             </div>
             <hr class="border-light">
-            <p class="text-center mb-0">&copy; 2024 PetLife. All rights reserved.</p>
+            <p class="text-center mb-0">&copy; 2026 ハンガーtimes. All rights reserved.</p>
         </div>
     </footer>
 </body>
-
->>>>>>> 7f7e55f (課題)
 </html>
