--- a/pet-care-guide使い方ガイド.html
+++ b/pet-care-guide使い方ガイド.html
@@ -18,7 +18,6 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #fff2e5;
-            /* 白に変更 */
         }
 
         .navbar {
@@ -592,9 +591,9 @@
                 <div class="col-md-2 mb-4">
                     <h6 class="fw-bold mb-3">サポート</h6>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-white text-decoration-none">ヘルプ</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">お問い合わせ</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">FAQ</a></li>
+                        <li><a href="help.html" class="text-white text-decoration-none">ヘルプ</a></li>
+                        <li><a href="form.html" class="text-white text-decoration-none">お問い合わせ</a></li>
+                        <li><a href="faq.html" class="text-white text-decoration-none">FAQ</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 mb-4">
