--- a/login.html
+++ b/login.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <style>
         :root {
-            --primary-color: #8b5e34;
-            --secondary-color: #d4a373;
-            --bg-color: #fefae0;
-            --brown-color: #432818;
+            --primary-color: #10b981;
+            --secondary-color: #f59e0b;
+            --accent-color: #fb923c;
+            --brown-color: #78350f;
         }
 
         body {
-            background-color: var(--bg-color);
-            font-family: 'Helvetica Neue', Arial, sans-serif;
+            background-color: #fff2e5;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             height: 100vh;
             display: flex;
             align-items: center;
