--- a/pet-guide-detailハンガー種類.html
+++ b/pet-guide-detailハンガー種類.html
@@ -131,7 +131,7 @@
     <div class="container mt-4">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="indexホーム.html">ホーム</a></li>
+                <li class="breadcrumb-item"><a href="index.html">ホーム</a></li>
                 <li class="breadcrumb-item"><a href="pet-guide-listハンガー図鑑.html">ハンガー図鑑</a></li>
                 <li class="breadcrumb-item active">マワハンガー シルエット</li>
             </ol>
@@ -336,9 +336,9 @@
                 <div class="col-md-2 mb-4">
                     <h6 class="fw-bold mb-3">サポート</h6>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-white text-decoration-none">ヘルプ</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">お問い合わせ</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">FAQ</a></li>
+                        <li><a href="help.html" class="text-white text-decoration-none">ヘルプ</a></li>
+                        <li><a href="form.html" class="text-white text-decoration-none">お問い合わせ</a></li>
+                        <li><a href="faq.html" class="text-white text-decoration-none">FAQ</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 mb-4">
@@ -352,12 +352,10 @@
                 </div>
             </div>
             <hr class="border-light">
-            <p class="text-center mb-0">&copy; 2024 PetLife. All rights reserved.</p>
+            <p class="text-center mb-0">&copy; 2026 ハンガーtimes. All rights reserved.</p>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
->>>>>>> 7f7e55f (課題)
 </html>
