--- a/pet-guide-form管理記録.html
+++ b/pet-guide-form管理記録.html
@@ -11,13 +11,13 @@
         :root {
             --primary-color: #10b981;
             --secondary-color: #f59e0b;
-            --accent-color: #3b82f6;
-            --brown-color: #4b3621;
+            --accent-color: #fb923c;
+            --brown-color: #78350f;
         }
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #fef3c7;
+            background-color: #fff2e5;
         }
 
         .navbar {
@@ -307,8 +307,8 @@
         }
 
         footer {
-            background-color: var(--brown-color);
-            color: white;
+            background-color: #8e7f7f;
+            color: #d8e1f1;
             padding: 40px 0;
             margin-top: 80px;
             border-radius: 50px 50px 0 0;
@@ -518,10 +518,43 @@
     </div>
 
     <!-- フッター -->
-    <footer class="text-center">
+    <footer>
         <div class="container">
-            <h4>HangerLife</h4>
-            <p>© 2026 HangerLife. All Rights Reserved.</p>
+            <div class="row">
+                <div class="col-md-4 mb-4">
+                    <h5 class="fw-bold mb-3">
+                        <i class="bi bi-heart-fill text-danger"></i> ハンガーtimes
+                    </h5>
+                    <p>ハンガーで衣服と暮らしを応援する情報サイト</p>
+                </div>
+                <div class="col-md-2 mb-4">
+                    <h6 class="fw-bold mb-3">サイト情報</h6>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="text-white text-decoration-none">About</a></li>
+                        <li><a href="#" class="text-white text-decoration-none">利用規約</a></li>
+                        <li><a href="#" class="text-white text-decoration-none">プライバシー</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-2 mb-4">
+                    <h6 class="fw-bold mb-3">サポート</h6>
+                    <ul class="list-unstyled">
+                        <li><a href="help.html" class="text-white text-decoration-none">ヘルプ</a></li>
+                        <li><a href="form.html" class="text-white text-decoration-none">お問い合わせ</a></li>
+                        <li><a href="faq.html" class="text-white text-decoration-none">FAQ</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <h6 class="fw-bold mb-3">フォローする</h6>
+                    <div class="d-flex gap-3">
+                        <a href="#" class="text-white fs-4"><i class="bi bi-twitter"></i></a>
+                        <a href="#" class="text-white fs-4"><i class="bi bi-instagram"></i></a>
+                        <a href="#" class="text-white fs-4"><i class="bi bi-youtube"></i></a>
+                        <a href="#" class="text-white fs-4"><i class="bi bi-facebook"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr class="border-light">
+            <p class="text-center mb-0">&copy; 2026 ハンガーtimes. All rights reserved.</p>
         </div>
     </footer>
 
@@ -574,6 +607,4 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
->>>>>>> 7f7e55f (課題)
 </html>
