--- a/pet-guide-listハンガー図鑑.html
+++ b/pet-guide-listハンガー図鑑.html
@@ -18,7 +18,6 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #fff2e5;
-            /* 白に変更 */
         }
 
         .navbar {
@@ -38,9 +37,9 @@
             margin: 0 10px;
         }
 
+        .nav-link:hover,
         .nav-link.active {
             color: var(--primary-color) !important;
-            font-weight: bold;
         }
 
         .page-header {
@@ -296,9 +295,9 @@
                 <div class="col-md-2 mb-4">
                     <h6 class="fw-bold mb-3">サポート</h6>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-white text-decoration-none">ヘルプ</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">お問い合わせ</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">FAQ</a></li>
+                        <li><a href="help.html" class="text-white text-decoration-none">ヘルプ</a></li>
+                        <li><a href="form.html" class="text-white text-decoration-none">お問い合わせ</a></li>
+                        <li><a href="faq.html" class="text-white text-decoration-none">FAQ</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 mb-4">
@@ -312,7 +311,7 @@
                 </div>
             </div>
             <hr class="border-light">
-            <p class="text-center mb-0">&copy; 2024 PetLife. All rights reserved.</p>
+            <p class="text-center mb-0">&copy; 2026 ハンガーtimes. All rights reserved.</p>
         </div>
     </footer>
     <script>
