--- a/woodhanger.html
+++ b/woodhanger.html
@@ -13,13 +13,11 @@
             --secondary-color: #f59e0b;
             --accent-color: #fb923c;
             --brown-color: #78350f;
-            --hanger-beige: #fff2e5;
         }
 
         body {
-            font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo, sans-serif;
-            background-color: var(--hanger-beige);
-            color: #4b5563;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #fff2e5;
         }
 
         /* ナビゲーション */
@@ -32,6 +30,16 @@
             font-weight: bold;
             color: var(--primary-color) !important;
             font-size: 1.5rem;
+        }
+
+        .nav-link {
+            color: var(--brown-color) !important;
+            font-weight: 500;
+            margin: 0 10px;
+        }
+
+        .nav-link:hover {
+            color: var(--primary-color) !important;
         }
 
         /* ヒーローセクション */
@@ -307,9 +315,9 @@
                 <div class="col-md-2 mb-4">
                     <h6 class="fw-bold mb-3">サポート</h6>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-white text-decoration-none">ヘルプ</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">お問い合わせ</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">FAQ</a></li>
+                        <li><a href="help.html" class="text-white text-decoration-none">ヘルプ</a></li>
+                        <li><a href="form.html" class="text-white text-decoration-none">お問い合わせ</a></li>
+                        <li><a href="faq.html" class="text-white text-decoration-none">FAQ</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 mb-4">
@@ -323,7 +331,7 @@
                 </div>
             </div>
             <hr class="border-light">
-            <p class="text-center mb-0">&copy; 2024 PetLife. All rights reserved.</p>
+            <p class="text-center mb-0">&copy; 2026 ハンガーtimes. All rights reserved.</p>
         </div>
     </footer>
 
