--- a/pet-guide-detailハンガー種類.html
+++ b/pet-guide-detailハンガー種類.html
@@ -11,13 +11,13 @@
         :root {
             --primary-color: #10b981;
             --secondary-color: #f59e0b;
+            --accent-color: #fb923c;
             --brown-color: #78350f;
         }
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #fff2e5;
-            /* 白に変更 */
         }
 
         .navbar {
