--- a/pet-guide-listハンガー図鑑.html
+++ b/pet-guide-listハンガー図鑑.html
@@ -138,7 +138,8 @@
                     <li class="nav-item"><a class="nav-link" href="pet-guide-form管理記録.html">管理記録</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-recordレビュー.html">メンテナンス記録</a></li>
                 </ul>
-                <a href="login.html" class="btn btn-outline-success ms-3 rounded-pill fw-bold btn-login text-decoration-none">
+                <a href="login.html"
+                    class="btn btn-outline-success ms-3 rounded-pill fw-bold btn-login text-decoration-none">
                     <i class="bi bi-person-circle"></i> ログイン
                 </a>
             </div>
@@ -240,7 +241,7 @@
                                     <div><small>対応衣類</small><br><strong>シャツ</strong></div>
                                     <div><small>耐荷重</small><br><strong>中</strong></div>
                                 </div>
-                               <button onclick="location.href='pulastic.html'"
+                                <button onclick="location.href='pulastic.html'"
                                     class="btn btn-outline-success w-100 rounded-pill">
                                     詳細を見る
                                 </button>
