--- a/cliptype.html
+++ b/cliptype.html
@@ -141,14 +141,13 @@
         <div id="petCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/506289.jpg" class="d-block w-100"
-                        alt="ハンズオリジナル 木製ハンガー クリップタイプ">
+                    <img src="img/506289.jpg" class="d-block w-100" alt="ハンズオリジナル 木製ハンガー クリップタイプ">
                 </div>
                 <div class="carousel-item">
                     <img src="img/296416.jpg" class="d-block w-100" alt="木製クリップハンガー 使用例">
                 </div>
             </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#petCarousel" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#petCarousel" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon"></span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#petCarousel" data-bs-slide="next">
@@ -315,4 +314,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 </html>
