--- a/faq.html
+++ b/faq.html
@@ -26,7 +26,7 @@
         /* ===== Navbar ===== */
         .navbar {
             background-color: white;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
         .navbar-brand {
@@ -48,8 +48,8 @@
         /* ===== Page Header ===== */
         .page-header {
             background: linear-gradient(135deg,
-                rgba(220, 252, 231, 0.9),
-                rgba(254, 215, 170, 0.9));
+                    rgba(220, 252, 231, 0.9),
+                    rgba(254, 215, 170, 0.9));
             padding: 70px 0;
             border-radius: 0 0 50px 50px;
             margin-bottom: 60px;
@@ -65,7 +65,7 @@
             background: white;
             border-radius: 25px;
             padding: 25px 30px;
-            box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
             margin-bottom: 20px;
         }
 
@@ -77,7 +77,7 @@
 
         .accordion-button:not(.collapsed) {
             color: var(--primary-color);
-            background-color: rgba(16,185,129,0.08);
+            background-color: rgba(16, 185, 129, 0.08);
             box-shadow: none;
         }
 
@@ -103,7 +103,7 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg sticky-top">
+    <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <i class="bi bi-hanger"></i> ハンガーtimes
@@ -128,85 +128,88 @@
         </div>
     </nav>
 
-<!-- ===== Header ===== -->
-<section class="page-header text-center">
-    <div class="container">
-        <h1 class="display-4 mb-3">
-            <i class="bi bi-question-circle-fill text-success"></i> よくある質問
-        </h1>
-        <p class="lead text-muted">
-            ハンガー選びや使い方に関する疑問にお答えします
-        </p>
-    </div>
-</section>
+    <!-- ===== Header ===== -->
+    <section class="page-header text-center">
+        <div class="container">
+            <h1 class="display-4 mb-3">
+                <i class="bi bi-question-circle-fill text-success"></i> よくある質問
+            </h1>
+            <p class="lead text-muted">
+                ハンガー選びや使い方に関する疑問にお答えします
+            </p>
+        </div>
+    </section>
 
-<!-- ===== FAQ ===== -->
-<div class="container mb-5">
+    <!-- ===== FAQ ===== -->
+    <div class="container mb-5">
 
-    <div class="faq-card">
-        <div class="accordion" id="faqAccordion">
+        <div class="faq-card">
+            <div class="accordion" id="faqAccordion">
 
-            <div class="accordion-item border-0">
-                <h2 class="accordion-header">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#q1">
-                        Q. シャツに最適なハンガーはどれですか？
-                    </button>
-                </h2>
-                <div id="q1" class="accordion-collapse collapse show">
-                    <div class="accordion-body">
-                        襟の形を崩しにくい「シャツ・ブラウス用ハンガー」がおすすめです。
-                        肩幅に合ったサイズを選ぶことで、型崩れを防げます。
+                <div class="accordion-item border-0">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#q1">
+                            Q. シャツに最適なハンガーはどれですか？
+                        </button>
+                    </h2>
+                    <div id="q1" class="accordion-collapse collapse show">
+                        <div class="accordion-body">
+                            襟の形を崩しにくい「シャツ・ブラウス用ハンガー」がおすすめです。
+                            肩幅に合ったサイズを選ぶことで、型崩れを防げます。
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="accordion-item border-0 mt-3">
-                <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#q2">
-                        Q. スーツは上下セットで掛けた方がいいですか？
-                    </button>
-                </h2>
-                <div id="q2" class="accordion-collapse collapse">
-                    <div class="accordion-body">
-                        はい、上下セットで収納できるクリップ付きハンガーがおすすめです。
-                        シワ防止と管理のしやすさが向上します。
+                <div class="accordion-item border-0 mt-3">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#q2">
+                            Q. スーツは上下セットで掛けた方がいいですか？
+                        </button>
+                    </h2>
+                    <div id="q2" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            はい、上下セットで収納できるクリップ付きハンガーがおすすめです。
+                            シワ防止と管理のしやすさが向上します。
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="accordion-item border-0 mt-3">
-                <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#q3">
-                        Q. 肩に跡がつかないハンガーはありますか？
-                    </button>
-                </h2>
-                <div id="q3" class="accordion-collapse collapse">
-                    <div class="accordion-body">
-                        肩部分が湾曲した「肩ぽこ防止タイプ」や滑り止め付きハンガーがおすすめです。
-                        ニットやカーディガンに最適です。
+                <div class="accordion-item border-0 mt-3">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#q3">
+                            Q. 肩に跡がつかないハンガーはありますか？
+                        </button>
+                    </h2>
+                    <div id="q3" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            肩部分が湾曲した「肩ぽこ防止タイプ」や滑り止め付きハンガーがおすすめです。
+                            ニットやカーディガンに最適です。
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="accordion-item border-0 mt-3">
-                <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#q4">
-                        Q. 木製ハンガーとプラスチックハンガーの違いは？
-                    </button>
-                </h2>
-                <div id="q4" class="accordion-collapse collapse">
-                    <div class="accordion-body">
-                        木製ハンガーは耐久性と高級感があり、スーツやコート向き。
-                        プラスチック製は軽量で日常使いに適しています。
+                <div class="accordion-item border-0 mt-3">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#q4">
+                            Q. 木製ハンガーとプラスチックハンガーの違いは？
+                        </button>
+                    </h2>
+                    <div id="q4" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            木製ハンガーは耐久性と高級感があり、スーツやコート向き。
+                            プラスチック製は軽量で日常使いに適しています。
+                        </div>
                     </div>
                 </div>
-            </div>
 
+            </div>
         </div>
     </div>
-</div>
 
- <footer>
+    <footer>
         <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-4">
@@ -246,6 +249,7 @@
         </div>
     </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
