--- a/help.html
+++ b/help.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +24,7 @@
 
         .navbar {
             background-color: white;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
         .navbar-brand {
@@ -44,9 +45,8 @@
 
         .hero-section {
             background: linear-gradient(135deg,
-                rgba(220,252,231,0.9),
-                rgba(254,215,170,0.9)
-            );
+                    rgba(220, 252, 231, 0.9),
+                    rgba(254, 215, 170, 0.9));
             padding: 70px 0;
             border-radius: 0 0 50px 50px;
             margin-bottom: 50px;
@@ -74,7 +74,7 @@
             background: white;
             border-radius: 25px;
             padding: 30px;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
             height: 100%;
         }
 
@@ -96,7 +96,7 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg sticky-top">
+    <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <i class="bi bi-hanger"></i> ハンガーtimes
@@ -121,68 +121,68 @@
         </div>
     </nav>
 
-<!-- ヒーロー -->
-<section class="hero-section text-center">
+    <!-- ヒーロー -->
+    <section class="hero-section text-center">
+        <div class="container">
+            <h1 class="display-5 fw-bold mb-3">
+                <i class="bi bi-question-circle-fill text-success"></i> ヘルプ
+            </h1>
+            <p class="lead" style="color:#78350f;">
+                ハンガーtimesの使い方やよくある質問はこちら
+            </p>
+        </div>
+    </section>
+
+    <!-- ヘルプ内容 -->
     <div class="container">
-        <h1 class="display-5 fw-bold mb-3">
-            <i class="bi bi-question-circle-fill text-success"></i> ヘルプ
-        </h1>
-        <p class="lead" style="color:#78350f;">
-            ハンガーtimesの使い方やよくある質問はこちら
-        </p>
-    </div>
-</section>
+        <div class="row g-4">
 
-<!-- ヘルプ内容 -->
-<div class="container">
-    <div class="row g-4">
-
-        <div class="col-md-4">
-            <div class="help-card text-center">
-                <div class="help-icon">
-                    <i class="bi bi-search"></i>
+            <div class="col-md-4">
+                <div class="help-card text-center">
+                    <div class="help-icon">
+                        <i class="bi bi-search"></i>
+                    </div>
+                    <h5 class="fw-bold mb-3">ハンガーの探し方</h5>
+                    <p class="text-muted">
+                        ハンガー図鑑から用途別・衣類別に最適なハンガーを検索できます。
+                    </p>
                 </div>
-                <h5 class="fw-bold mb-3">ハンガーの探し方</h5>
-                <p class="text-muted">
-                    ハンガー図鑑から用途別・衣類別に最適なハンガーを検索できます。
-                </p>
             </div>
+
+            <div class="col-md-4">
+                <div class="help-card text-center">
+                    <div class="help-icon">
+                        <i class="bi bi-journal-text"></i>
+                    </div>
+                    <h5 class="fw-bold mb-3">管理記録の使い方</h5>
+                    <p class="text-muted">
+                        所有しているハンガーや使用履歴を簡単に記録できます。
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="help-card text-center">
+                    <div class="help-icon">
+                        <i class="bi bi-chat-dots"></i>
+                    </div>
+                    <h5 class="fw-bold mb-3">Q&Aについて</h5>
+                    <p class="text-muted">
+                        ハンガーに関する疑問を質問・閲覧できます。
+                    </p>
+                </div>
+            </div>
+
         </div>
 
-        <div class="col-md-4">
-            <div class="help-card text-center">
-                <div class="help-icon">
-                    <i class="bi bi-journal-text"></i>
-                </div>
-                <h5 class="fw-bold mb-3">管理記録の使い方</h5>
-                <p class="text-muted">
-                    所有しているハンガーや使用履歴を簡単に記録できます。
-                </p>
-            </div>
+        <div class="text-center mt-5">
+            <a href="form.html" class="btn btn-success rounded-pill px-5 py-3 fw-bold">
+                <i class="bi bi-envelope"></i> お問い合わせはこちら
+            </a>
         </div>
-
-        <div class="col-md-4">
-            <div class="help-card text-center">
-                <div class="help-icon">
-                    <i class="bi bi-chat-dots"></i>
-                </div>
-                <h5 class="fw-bold mb-3">Q&Aについて</h5>
-                <p class="text-muted">
-                    ハンガーに関する疑問を質問・閲覧できます。
-                </p>
-            </div>
-        </div>
-
     </div>
 
-    <div class="text-center mt-5">
-        <a href="form.html" class="btn btn-success rounded-pill px-5 py-3 fw-bold">
-            <i class="bi bi-envelope"></i> お問い合わせはこちら
-        </a>
-    </div>
-</div>
-
- <footer>
+    <footer>
         <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-4">
@@ -222,6 +222,7 @@
         </div>
     </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
