--- a/pet-guide-form管理記録.html
+++ b/pet-guide-form管理記録.html
@@ -335,7 +335,8 @@
                     <li class="nav-item"><a class="nav-link active" href="#">管理記録</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-recordレビュー.html">メンテナンス記録</a></li>
                 </ul>
-                <a href="login.html" class="btn btn-outline-success ms-3 rounded-pill fw-bold btn-login text-decoration-none">
+                <a href="login.html"
+                    class="btn btn-outline-success ms-3 rounded-pill fw-bold btn-login text-decoration-none">
                     <i class="bi bi-person-circle"></i> ログイン
                 </a>
             </div>
@@ -607,4 +608,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
