--- a/pet-guide-qaQ&A.html
+++ b/pet-guide-qaQ&A.html
@@ -298,7 +298,8 @@
                     <li class="nav-item"><a class="nav-link" href="pet-guide-form管理記録.html">管理記録</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-recordレビュー.html">メンテナンス記録</a></li>
                 </ul>
-                <a href="login.html" class="btn btn-outline-success ms-3 rounded-pill fw-bold btn-login text-decoration-none">
+                <a href="login.html"
+                    class="btn btn-outline-success ms-3 rounded-pill fw-bold btn-login text-decoration-none">
                     <i class="bi bi-person-circle"></i> ログイン
                 </a>
             </div>
@@ -533,6 +534,4 @@
         });
     </script>
 </body>
-
->>>>>>> 7f7e55f (課題)
 </html>
