--- a/pet-guide-recordレビュー.html
+++ b/pet-guide-recordレビュー.html
@@ -256,7 +256,8 @@
                     <li class="nav-item"><a class="nav-link" href="pet-guide-form管理記録.html">管理記録</a></li>
                     <li class="nav-item"><a class="nav-link active" href="#">メンテナンス記録</a></li>
                 </ul>
-                <a href="login.html" class="btn btn-outline-success ms-3 rounded-pill fw-bold btn-login text-decoration-none">
+                <a href="login.html"
+                    class="btn btn-outline-success ms-3 rounded-pill fw-bold btn-login text-decoration-none">
                     <i class="bi bi-person-circle"></i> ログイン
                 </a>
             </div>
@@ -456,7 +457,7 @@
         </div>
     </div>
 
-     <footer>
+    <footer>
         <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-4">
