--- a/woodhanger.html
+++ b/woodhanger.html
@@ -44,7 +44,7 @@
 
         /* ヒーローセクション */
         .hanger-hero {
-            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('https://images.unsplash.com/photo-1594035910387-fea47794261f?q=80&w=2000&auto=format&fit=crop');
+            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('img/willdo_102319.jpg');
             background-size: cover;
             background-position: center;
             height: 350px;
@@ -139,7 +139,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">ホーム</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pet-guide-detailハンガー種類.html">ハンガー種類</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pet-guide-listハンガー図鑑.html">ハンガー種類</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-care-guide使い方ガイド.html">使い方ガイド</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-qaQ&A.html">Q&A</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-form管理記録.html">管理記録</a></li>
