--- a/metalhanger.html
+++ b/metalhanger.html
@@ -20,6 +20,7 @@
             background-color: #fff2e5;
         }
 
+        /* ナビゲーション */
         .navbar {
             background-color: white;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -37,11 +38,11 @@
             margin: 0 10px;
         }
 
-        .nav-link:hover,
-        .nav-link.active {
+        .nav-link:hover {
             color: var(--primary-color) !important;
         }
 
+        /* ヒーローセクション */
         .hanger-hero {
             background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('img/71+Ew-KsuaL._AC_.jpg');
             background-size: cover;
@@ -55,6 +56,7 @@
             text-align: center;
         }
 
+        /* メインカード */
         .hanger-main-card {
             background: white;
             border-radius: 30px;
@@ -82,6 +84,7 @@
             margin-top: 5px;
         }
 
+        /* サイドバー */
         .info-sidebar-card {
             background: white;
             border-radius: 25px;
@@ -90,6 +93,7 @@
             margin-bottom: 25px;
         }
 
+        /* 比較テーブル */
         .comparison-table {
             background: #f9fafb;
             border-radius: 15px;
@@ -102,6 +106,23 @@
             padding: 60px 0 30px;
             margin-top: 80px;
             border-radius: 50px 50px 0 0;
+        }
+
+        /* ヒーロー直後のカード位置を下げて重なりを防ぐ */
+        /* 左右のカードの上位置を揃える */
+        .hanger-main-card,
+        .info-sidebar-card {
+            margin-top: 40px;
+            /* 上に40pxの余白をつけて整列 */
+        }
+
+        /* 画面幅が狭いときはもう少し小さめに */
+        @media (max-width: 767px) {
+
+            .hanger-main-card,
+            .info-sidebar-card {
+                margin-top: 30px;
+            }
         }
     </style>
 </head>
