--- a/pulastic.html
+++ b/pulastic.html
@@ -20,6 +20,7 @@
             background-color: #fff2e5;
         }
 
+        /* ナビゲーション */
         .navbar {
             background-color: white;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -37,13 +38,13 @@
             margin: 0 10px;
         }
 
-        .nav-link:hover,
-        .nav-link.active {
+        .nav-link:hover {
             color: var(--primary-color) !important;
         }
 
+        /* ヒーローセクション */
         .hanger-hero {
-            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('img/71re5HZiViL._AC_SL1500_.jpg');
+            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('img/23834970_m-e1668141827716.jpg');
             background-size: cover;
             background-position: center;
             height: 350px;
@@ -55,6 +56,7 @@
             text-align: center;
         }
 
+        /* メインカード */
         .hanger-main-card {
             background: white;
             border-radius: 30px;
@@ -82,6 +84,7 @@
             margin-top: 5px;
         }
 
+        /* サイドバー */
         .info-sidebar-card {
             background: white;
             border-radius: 25px;
@@ -90,6 +93,7 @@
             margin-bottom: 25px;
         }
 
+        /* 比較テーブル */
         .comparison-table {
             background: #f9fafb;
             border-radius: 15px;
@@ -102,6 +106,23 @@
             padding: 60px 0 30px;
             margin-top: 80px;
             border-radius: 50px 50px 0 0;
+        }
+
+        /* ヒーロー直後のカード位置を下げて重なりを防ぐ */
+        /* 左右のカードの上位置を揃える */
+        .hanger-main-card,
+        .info-sidebar-card {
+            margin-top: 40px;
+            /* 上に40pxの余白をつけて整列 */
+        }
+
+        /* 画面幅が狭いときはもう少し小さめに */
+        @media (max-width: 767px) {
+
+            .hanger-main-card,
+            .info-sidebar-card {
+                margin-top: 30px;
+            }
         }
     </style>
 </head>
@@ -118,7 +139,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">ホーム</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pet-guide-detailハンガー種類.html">ハンガー種類</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pet-guide-listハンガー図鑑.html">ハンガー種類</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-care-guide使い方ガイド.html">使い方ガイド</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-qaQ&A.html">Q&A</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-form管理記録.html">管理記録</a></li>
@@ -134,17 +155,18 @@
 
     <header class="hanger-hero">
         <div class="container">
-            <h1 class="display-4 fw-bold">Plastic Hanger</h1>
-            <p class="fs-5">軽量で毎日使える、ベーシックなプラスチックハンガー</p>
+            <h1 class="display-4 fw-bold">pulastic Hanger</h1>
+            <p class="fs-5">軽くて、強い。毎日使いたくなるハンガー</p>
         </div>
     </header>
 
+    <!-- 関連ハンガー（戻り導線） -->
     <div class="container mt-4">
         <div class="info-card text-center">
             <h5 class="fw-bold mb-3" style="color: var(--brown-color);">
                 <i class="bi bi-arrow-left-circle"></i> 関連ハンガー
             </h5>
-            <a href="#" class="btn btn-outline-success btn-lg rounded-pill px-5">
+            <a href="pet-guide-detailハンガー種類.html" class="btn btn-outline-success btn-lg rounded-pill px-5">
                 <i class="bi bi-hanger"></i> 他のハンガー種類を見る
             </a>
         </div>
