--- a/index.html
+++ b/index.html
@@ -380,9 +380,9 @@
                                     <div class="text-warning">★★★★☆</div>
                                 </div>
                             </div>
-                            <button class="btn btn-outline-info rounded-pill w-100">
+                            <a href="bodyhanger.html" class="btn btn-outline-success rounded-pill w-100">
                                 詳細を見る <i class="bi bi-arrow-right"></i>
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -408,9 +408,9 @@
                                     <div class="text-warning">★★★★☆</div>
                                 </div>
                             </div>
-                            <button class="btn rounded-pill w-100" style="border: 2px solid #8b5cf6; color: #8b5cf6;">
+                            <a href="Accessories.html" class="btn btn-outline-success rounded-pill w-100">
                                 詳細を見る <i class="bi bi-arrow-right"></i>
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -436,9 +436,9 @@
                                     <div class="text-warning">★★★☆☆</div>
                                 </div>
                             </div>
-                            <button class="btn rounded-pill w-100" style="border: 2px solid #14b8a6; color: #14b8a6;">
+                            <a href="eco.html" class="btn btn-outline-success rounded-pill w-100">
                                 詳細を見る <i class="bi bi-arrow-right"></i>
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -464,9 +464,9 @@
                                     <div class="text-warning">★★★★☆</div>
                                 </div>
                             </div>
-                            <button class="btn btn-outline-primary rounded-pill w-100">
+                            <a href="original.html" class="btn btn-outline-success rounded-pill w-100">
                                 詳細を見る <i class="bi bi-arrow-right"></i>
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
