--- a/pet-care-guide使い方ガイド.html
+++ b/pet-care-guide使い方ガイド.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ハンガーtimes - 使い方ガイド</title>
-     <link rel="icon" href="img/favicon (4).ico">
+    <link rel="icon" href="img/favicon (4).ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <style>
@@ -305,6 +305,23 @@
                 font-size: 1.2rem;
             }
         }
+
+        .search-box .d-flex {
+            flex-wrap: nowrap;
+            /* 折り返し禁止 */
+        }
+
+        .search-box input {
+            min-width: 0;
+            /* flexでのはみ出し防止 */
+        }
+
+        .search-box button {
+            white-space: nowrap;
+            /* 「検 索」みたいな縦割れ防止 */
+            flex-shrink: 0;
+            /* ボタン幅を維持 */
+        }
     </style>
 </head>
 
@@ -352,7 +369,7 @@
     <div class="container">
         <!-- 検索ボックス -->
         <div class="search-box">
-            <div class="d-flex align-items-center">
+            <div class="d-flex align-items-center flex-nowrap">
                 <input type="text" class="flex-grow-1" placeholder="使い方を検索...（例：スーツに最適なハンガー）">
                 <button type="button">
                     <i class="bi bi-search"></i> 検索
@@ -620,4 +637,5 @@
         });
     </script>
 </body>
+
 </html>
