--- a/woodhanger.html
+++ b/woodhanger.html
@@ -160,6 +160,15 @@
         </div>
     </header>
 
+    <div class="container mt-4">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html">ホーム</a></li>
+                <li class="breadcrumb-item"><a href="pet-guide-listハンガー図鑑.html">ハンガー図鑑</a></li>
+                <li class="breadcrumb-item active">woodhanger</li>
+            </ol>
+        </nav>
+
     <!-- 関連ハンガー（戻り導線） -->
     <div class="container mt-4">
         <div class="info-card text-center">
